# vpn-whitelist

./: .gitignore  PKGBUILD  README.md  dns-proxy  pyproject.toml  vpn-whitelist  vpn-whitelist-dns-proxy  vpn-whitelist.NetworkManager-dispatcher  vpn-whitelist.conf  vpn-whitelist.service
