[tool.poetry]
name = "vpn-whitelist"
version = "1.0.0"
description = ""
authors = ["cryzed <cryzed@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
