[tool.poetry]
name = "vpn-whitelist"
version = "1.1.0"
description = ""
authors = ["cryzed <cryzed@googlemail.com>"]

[tools.black]
line-length=120

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
mypy = "^0.770"
rope = "^0.18.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
