[tool.poetry]
name = "vpn-whitelist"
version = "1.2.0"
description = ""
authors = ["cryzed <cryzed@googlemail.com>"]

[tools.black]
line-length=120

[tool.poetry.dependencies]
python = "^3.8"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]
black = "^21.4b2"
mypy = "^0.812"
rope = "^0.19.0"
pylint = "^2.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
